code/cgame/cg_local.h

Q_EXPORT void CG_FillRect( float x, float y, float width, float height, const float *color );
Q_EXPORT void CG_DrawPic( float x, float y, float width, float height, qhandle_t hShader );
Q_EXPORT void UI_DrawProportionalString( int x, int y, const char* str, int style, vec4_t color );
Q_EXPORT void CG_DrawRect( float x, float y, float width, float height, float size, const float *color );
Q_EXPORT void CG_DrawSides(float x, float y, float w, float h, float size);
Q_EXPORT void CG_DrawTopBottom(float x, float y, float w, float h, float size);
Q_EXPORT void CG_DrawHead( float x, float y, float w, float h, int clientNum, vec3_t headAngles );